tests/toylang/neg/001177_mutation.toylang
program a = { 0 sleep; } .
